# icetwang

./: .gitmodules  README.md
firmware/icetwang-blink/: Cargo.toml  README.md
firmware/icetwang-blink/.cargo/: flash.sh
firmware/icetwang-blink/src/: i2c.rs  imu.rs  joy.rs  leds.rs  ledstr.rs  main.rs  rgbled.rs  timer.rs
firmware/icetwang-dungeon/: Cargo.toml  README.md
firmware/icetwang-dungeon/src/: joy.rs  led_string.rs  ledstr.rs  ledstr_hal.rs  main.rs  print.rs  rgbled.rs  timer.rs
firmware/icetwang-dungeon/src/twang/: attract.rs  boss.rs  conveyor.rs  enemy.rs  lava.rs  led_string.rs  mod.rs  particle.rs  player.rs  rand.rs  screensaver.rs  spawner.rs  utils.rs  world.rs
firmware/icetwang-pac/: Cargo.toml  README.md  build.rs  icetwang-soc.svd  memory.x
firmware/icetwang-pac/src/: pac.rs
hardware/: .gitignore
hardware/ctrl-v0.1/: fp-lib-table  icetwang-controller.kicad_pcb  icetwang-controller.kicad_pro  icetwang-controller.kicad_sch
hardware/pole-v0.1/: icetwang-comm.kicad_sch  icetwang-led.kicad_sch  icetwang-pole.kicad_pcb  icetwang-pole.kicad_pro  icetwang-pole.kicad_sch  sym-lib-table
sim/dungeon-sim/: Cargo.toml  README.md
sim/dungeon-sim/src/: main.rs  twang
soc/ice-twang/: Makefile  README.md
soc/ice-twang/data/: top-bitsy-v1.pcf
soc/ice-twang/fw/: fw_app.c  led.c  usb_desc_app.c  usb_str_app.txt
soc/ice-twang/rtl/: joy_wb.v  ledstring.v  ledstring_wb.v  timer_wb.v  top.v
soc/ice-twang/sim/: ledstring_tb.v  timer_tb.v
soc/ice-twang/svd/: README.md  gensvd.sh  icetwang-soc.yaml  svdtemplate.svd
