[package]
name = "icetwang-dungeon"
version = "0.1.0"
authors = ["Piotr Esden-Tempski <piotr@esden.net>"]
edition = "2018"
license = "BSD-2-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icetwang-pac = { path = "../icetwang-pac" }
riscv-rt  = "0.7.0"
vcell = "0.1.2"

[features]
icetwanghw = []
default = ["icetwanghw"]

[profile.release]
# Keep debug information for release builds, for easier debugging.
# It will be removed during the conversion to the .dfu file.
debug = true

# Improve code generation
lto = true
codegen-units = 1

