[package]
name = "rtwang"
version = "0.1.0"
authors = ["Piotr Esden-Tempski <piotr@esden.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "*"
pistoncore-sdl2_window = "*"
rand = "*"
find_folder = "*"